# powerlifting-project

./: .gitignore  LICENSE  README.md  app.py  dashboard.py  justfile  pyproject.toml  utils.py
app/: app.py  utils.py
data/1382/: meet.csv
notebooks/: exploring.ipynb
scripts/: interact.py
src/powerlifting/: __init__.py  models.py
tests/: test_powerlifting.py
